--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
+@font-face {
+    font-family: 'GenSenRounded-H';
+    src: url('fonts/GenSenRounded-H.ttc') format('truetype');
+    font-weight: normal;
+    /* 或者 font-weight: bold; 根據需要 */
+    font-style: normal;
+    /* 或者 font-style: italic; 根據需要 */
+}
+
+@font-face {
+    font-family: 'GenSenRounded-B';
+    src: url('fonts/GenSenRounded-B.ttc') format('truetype');
+    font-weight: normal;
+    /* 或者 font-weight: bold; 根據需要 */
+    font-style: normal;
+    /* 或者 font-style: italic; 根據需要 */
+}
+
+html,
+body {
+    font-family: 'GenSenRounded-B', sans-serif;
+    /* font-family: 'Microsoft JhengHei', '微軟正黑體', sans-serif; */
+}
+
+input#upload {
+    font-size: 20px;
+    font-family: 'GenSenRounded-B', sans-serif;
+}
+
 #puzzle-container {
     display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(3, 100px);
+    grid-template-columns: repeat(3, 200px);
+    grid-template-rows: repeat(3, 200px);
     gap: 5px;
 }
 
@@ -17,9 +46,9 @@
 } */
 
 .puzzle-piece {
-    width: 100px;
-    height: 100px;
-    background-size: 300px 300px;
+    width: 200px;
+    height: 200px;
+    background-size: 600px 600px;
     cursor: pointer;
     box-sizing: border-box;
     border: 1px solid #000;
@@ -29,4 +58,88 @@
     background-color: white;
     cursor: default;
     border: none;
+}
+
+.btn {
+    position: relative;
+    z-index: 1;
+    min-width: 200px;
+    background: #e6e6e6;
+    color: black !important;
+    text-align: center;
+    padding: 12px 20px;
+    border: 3px solid black;
+    /* font-family: 'GenSenRounded-B', sans-serif; */
+    /* 加粗黑色框線 */
+}
+
+.btn span {
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    opacity: 0;
+    transform: translate(0, -20px);
+    transition: 0.25s cubic-bezier(0.5, -1, 0.5, 2);
+    /* font-family: 'GenSenRounded-B', sans-serif; */
+}
+
+.btn:before {
+    content: attr(data-text);
+    position: absolute;
+    width: 100%;
+    left: 0;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 3.5px;
+    opacity: 1;
+    transform: translate(0, 0px);
+    transition: 0.25s cubic-bezier(0.5, -1, 0.5, 2);
+}
+
+.btn:hover:before,
+.btn:focus:before {
+    opacity: 0;
+    transform: translate(0, 20px);
+}
+
+.btn:hover span,
+.btn:focus span {
+    opacity: 1;
+    transform: translate(0, 0);
+}
+
+.btn:hover span:nth-child(1),
+.btn:focus span:nth-child(1) {
+    transition-delay: 0.025s;
+}
+
+.btn:hover span:nth-child(2),
+.btn:focus span:nth-child(2) {
+    transition-delay: 0.05s;
+}
+
+.btn:hover span:nth-child(3),
+.btn:focus span:nth-child(3) {
+    transition-delay: 0.075s;
+}
+
+.btn:hover span:nth-child(4),
+.btn:focus span:nth-child(4) {
+    transition-delay: 0.1s;
+}
+
+.btn:hover span:nth-child(5),
+.btn:focus span:nth-child(5) {
+    transition-delay: 0.125s;
+}
+
+.btn:hover span:nth-child(6),
+.btn:focus span:nth-child(6) {
+    transition-delay: 0.15s;
 }
